Forbid container privilege escalations in YAML charts

--- a/charts/lakom/templates/deployment.yaml
+++ b/charts/lakom/templates/deployment.yaml
@@ -69,6 +69,8 @@ spec:
       - name: {{ .Values.name }}
         image: {{ include "image" . }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        securityContext:
+          allowPrivilegeEscalation: false
         command:
         - /lakom
         - --cache-ttl={{ .Values.cache.ttl }}
