--- a/charts/gardener-extension-shoot-lakom-admission/charts/runtime/templates/deployment.yaml
+++ b/charts/gardener-extension-shoot-lakom-admission/charts/runtime/templates/deployment.yaml
@@ -39,6 +39,8 @@ spec:
       - name: {{ include "name" . }}
         image: {{ include "image" .Values.global.image }}
         imagePullPolicy: {{ .Values.global.image.pullPolicy }}
+        securityContext:
+          allowPrivilegeEscalation: false
         args:
         - --webhook-config-server-port={{ .Values.global.webhookConfig.serverPort }}
         {{- if .Values.global.virtualGarden.enabled }}
